[package]
name = "cnpj-util"
version = "0.1.4"
authors = ["Rodolfo Ghiggi <rodolfoghi@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
Format and validate CNPJ, Brazil companies ID number.
"""
repository = "https://github.com/rodolfoghi/cnpj-util-rust"
documentation = "https://docs.rs/cnpj_util"
keywords = ["parser", "format", "validation", "cnpj"]
categories = ["parser-implementations", "value-formatting", "no-std"]
readme = "README.md"

[dependencies]
